--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.av.smart-inspector",
-  "version": "0.8.0-pre.1",
+  "name": "com.ellyality.editor.smartinspector",
+  "version": "1.0.0",
   "displayName": "Smart Inspector",
   "description": "Fluent re-take on Unity Inspector UX. \nPacked with QoL improvements - fully customizable.",
   "keywords": [
@@ -13,11 +13,7 @@
     "utility",
     "extensions"
   ],
-  "author": {
-    "name": "Alternative Visual",
-    "email": "alexander.neonage@gmail.com",
-    "url": "https://github.com/neon-age"
-  },
+  "author": "Elly Editor",
   "unity": "2019.3",
   "type": "tool"
 }
